# uni-group-tool

./: .coverage  .coverage.Michael-Desktop.15976.331811  .gitignore  AllGroups.py  All_Groups.py  Fitness_Data.py  Many_Groups.py  OneGroup.py  One_Group.py  README.md  config.json  groups.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  results.json  run_tool.py  run_tool.spec  setup.cfg  students.py  tox.ini
.github/workflows/: installer.yaml  tests.yaml
output/manual/: sample_short.csv
src/: Fitness_Data.py  Many_Groups.py  main.py  students.py
src/test_data/: eng1-teams to Michael.xlsx  groups long 2F 2o Average gender .xlsx  groups.csv  sample.csv  sample_short.csv
src/uni_group_tool/: Fitness_Data.py  Many_Groups.py  One_Group.py  README.md  main.py  students.py
src/uni_group_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/uni_group_tool/Front_end/: Criteria_frame.py  Criteria_storage.py  Processing.py  Run_app.py  ScrollBar_On_Table.py  Spefic_teams.py  Treeview_table.py  all_data_to_send.py  help_box_title.py  resolution_scaling.py  scrollbar_test.py  table.py  tk_front.py  toop_tips.py
src/uni_group_tool/Front_end/test_data/: groups_front_end.csv
src/uni_group_tool/Front_end/testing_sending_socket/: Run_app.py  send_data.py  test2.py  test3.py  test4.py  tk_test.py
src/uni_group_tool/Front_end/testing_sending_socket/test_data/: groups_api.csv  groups_front_end.csv  results.json
src/uni_group_tool/flaskr/: api.py  api2.py
src/uni_group_tool/flaskr/test_data/: groups_api.csv  groups_front_end.csv
src/uni_group_tool/test_data/: groups - long 1h.csv  groups -2F 2O average.xlsx  groups long 2F 2o Average gender .xlsx  groups.csv  groups_api.csv  groups_front_end.csv  output..xlsx  output.xlsx  sample.csv  sample_2_lines.csv  sample_short.csv  template.csv  test.xlsx  test1.csv  test1.xlsx  test2.xlsx  test3.xlsx  test4.xlsx
src/uni_group_tool/unigrouptool.egg-info/: PKG-INFO  requires.txt
src/unigrouptool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test_data/: data.csv  groups -2F 1M 2H 1O.xlsx  groups 2F 2o Average gender.xlsx  groups long 2F 2o Average gender .csv  groups.csv  sample_orgional.csv
testing/: .coverage  test_uni_tool.py  tests.py
testing/correct_output/: correct_csv.txt
