[metadata]
name = unigrouptool
description = creates groups based on a users criteria
author = Michael Beal
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    uni_group_tool
install_requires =
    pip~=21.1.2
    wheel~=0.36.2
    pytz~=2022.6
    numpy~=1.23.5
    setuptools~=57.0.0
    pandas~=1.5.2
    python-dateutil~=2.8.2
    six~=1.16.0
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160