[metadata]
name = uni_group_tool
description = creates groups based on a users criteria
author = Michael Beal
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    uni_group_tool
install_requires =
    pip~=21.1.2
    wheel~=0.36.2
    pytz~=2022.6
    setuptools~=57.0.0
    python-dateutil~=2.8.2
    six~=1.16.0
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
uni_group_tool = py.typed

[flake8]
max-line-length = 320
exclude =
    src\uni_group_tool\coding\*
    src\uni_group_tool\.idea\*
    src\uni_group_tool\test_data\*
    src\uni_group_tool\unigrouptool.egg-info\*

